[CHORE] Changed add-on name in manifest

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,1 +1,1 @@
-{"package": "Migaku Anki Extension", "name": "Migaku Anki Extension"}
+{"package": "Migaku Anki Add-on", "name": "Migaku Anki Add-on"}
